force-app/main/default/objects/Account_Phone_Number_Assignment__c/Account_Phone_Number_Assignment__c.object-meta.xml
<CustomObject>
    <description>Represents individual phone numbers within a series (DKT-45211).</description>
    <label>Account Phone Number Assignment</label>
    <nameField>
        <displayFormat>APNA-{000000000}</displayFormat>
        <label>Account Phone Number Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Phone Number Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>