force-app/main/default/objects/Account_Phone_Number_Assignment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Phone Number Assignments</relationshipLabel>
    <relationshipName>Account_Phone_Number_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>