force-app/main/default/objects/Account_Phone_Number_Assignment__c/fields/Account_Phone_Number_Series__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_Number_Series__c</fullName>
    <label>Account Phone Number Series</label>
    <referenceTo>Account_Phone_Number_Series__c</referenceTo>
    <relationshipLabel>Account Phone Number Assignments</relationshipLabel>
    <relationshipName>Account_Phone_Number_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>