force-app/main/default/objects/Account_Phone_Number_Assignment__c/fields/Activation_line__c.field-meta.xml
<CustomField>
    <fullName>Activation_line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for the Activation Line Phone Number assignment</description>
    <label>Activation line</label>
    <referenceTo>Activation_line__c</referenceTo>
    <relationshipLabel>Account Phone Number Assignments</relationshipLabel>
    <relationshipName>Account_Phone_Number_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>