force-app/main/default/objects/Account_Phone_Number_Assignment__c/fields/Count_Junctions__c.field-meta.xml
<CustomField>
    <fullName>Count_Junctions__c</fullName>
    <description>Count of how many Junctions associated to the Assignment</description>
    <label>Count Junctions</label>
    <summaryForeignKey>Activation_Assignment_Junction__c.Account_Phone_Number_Assignment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>