force-app/main/default/objects/Account_Phone_Number_Assignment__c/fields/CTN_Number_Status__c.field-meta.xml
<CustomField>
    <fullName>CTN_Number_Status__c</fullName>
    <description>CTN numbers as per given status. Status Description: 
AA - Assigned Available
AR - Assigned Reserved
AI - Assigned In Use
AS - Assigned Suspended</description>
    <label>CTN Number Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>