force-app/main/default/objects/Account_Phone_Number_Assignment__c/fields/Open_Number_Series__c.field-meta.xml
<CustomField>
    <fullName>Open_Number_Series__c</fullName>
    <description>Checked if Assignment belongs to an Open Series, else unchecked.</description>
    <formula>Account_Phone_Number_Series__r.Open_Number_Series__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if Assignment belongs to an Open Series, else unchecked.</inlineHelpText>
    <label>Open Number Series</label>
    <type>Checkbox</type>
</CustomField>