force-app/main/default/objects/Account_Phone_Number_Assignment__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>