force-app/main/default/objects/Account_Phone_Number_Assignment__c/fields/Phone_Number_Reservation_Error__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Reservation_Error__c</fullName>
    <label>Phone Number Reservation Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>