force-app/main/default/objects/Account_Phone_Number_Assignment__c/fields/Phone_Number_Reservation_Status__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Reservation_Status__c</fullName>
    <label>Phone Number Reservation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PhoneNumberReservationStatus</valueSetName>
    </valueSet>
</CustomField>