force-app/main/default/objects/Account_Phone_Number_Assignment__c/fields/Phone_Number_User__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_User__c</fullName>
    <label>Phone Number User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>